# charip

./: .gitignore  CLAUDE.md  Cargo.toml  GEMINI.md  PLAN.md  README.md
.cargo/: config.toml
.claude/: settings.local.json
.github/workflows/: deploy.yml  docs.yml  rust.yml
TestFiles/: broken-refs.md  code-examples.md  glossary.md  index.md  syntax-showcase.md
TestFiles/guides/: configuration.md  getting-started.md
TestFiles/reference/: api.md  equations.md
ai-docs/: Architectural_Deep_Dive.md  Architecture.md  Configuration.md  Current_Parsing_Logic.md  DataModel.md  Features.md  Future_Enhancements.md  MyST_Implementation_Plan.md  Parser_Gap_Analysis_and_Remediation.md  README.md  Target_Environment_Analysis.md  Testing_and_Dev_Env.md  architecture.yaml  deferred.yaml  myst-lsp-roadmap.md  myst-status.yaml  project.yaml
docs/: .gitignore  conf.py  index.md  requirements.txt
docs/Markdown Oxide Docs/: README.md
docs/_static/: custom.css
docs/architecture/: data-model.md  deep-dive.md  overview.md  reference-referenceable-design.md
docs/contributing/: commit-philosophy.md  development.md  index.md  testing.md
docs/development/: future-enhancements.md  myst-implementation.md  parser-analysis.md  target-environment.md
docs/explanation/: architecture.md  (+2 more)
scripts/: validate-docs.sh
src/: codeactions.rs  codelens.rs  commands.rs  config.rs  diagnostics.rs  frontmatter_schema.rs  gotodef.rs  hover.rs  lib.rs  main.rs  myst_parser.rs  references.rs  rename.rs  symbol.rs  test_utils.rs  tokens.rs  ui.rs
tests/: lib_api_test.rs  vault_graph_test.rs
(+35 files in other folders)
