[package]
name = "charip"
version = "0.1.0"
edition = "2021"
repository = "https://github.com/percy-raskova/charip"
description = "A Language Server for MyST Markdown — Build Your Own Infrastructure"

[lib]
name = "charip"
path = "src/lib.rs"

[[bin]]
name = "charip"
path = "src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.80"
chrono = "0.4.35"
clap = { version = "4.5", features = ["derive"] }
config = "0.14.0"
fuzzydate = "0.2.3"
itertools = "0.13.0"
nanoid = "0.4.0"
nucleo-matcher = "0.3.1"
once_cell = "1.18.0"
pathdiff = "0.2.1"
rayon = "1.7.0"
regex = "1.10.2"
ropey = "1.6.1"
serde = { version = "1.0.196", features = ["derive"] }
serde_json = "1.0.113"
serde_yaml = "0.9.34"
shellexpand = "3.1.0"
tokio = { version = "1.34.0", features = ["sync", "io-std", "macros", "rt-multi-thread"] }
tower-lsp = { git = "https://github.com/Feel-ix-343/tower-lsp" }
walkdir = "2.4.0"
urlencoding = "2.1.3"
markdown = "1.0.0-alpha.18"
petgraph = "0.8.3"
jsonschema = "0.28"

[dev-dependencies]
tempfile = "3"

[package.metadata.binstall]
pkg-url = "{ repo }/releases/download/v{ version }/{ name }-v{ version }-{ target }{ archive-suffix }"

[profile.release]
codegen-units = 1
lto = true

[profile.dev]
opt-level = 0

[profile.dev.package."*"]
opt-level = 2
